[package]
name = "reticulum-crypto"
version = "0.1.0"
edition = "2024"
description = "Reticulum crypto library for operating systems and embedded devices"
license = "Apache-2.0"
repository = "https://github.com/ion232/reticulum-crypto"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
ed25519-dalek = "2.2.0"
hkdf = "0.12.4"
hmac = "0.12.1"
sha2 = "0.10.9"
x25519-dalek = "2.0.1"
